Update Spring AI to 2.0.0-M3